# VCompiler

./: .gitignore  CMakeLists.txt  main.cpp
analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  main.cpp
code/: analyze_code.txt  sql_code.txt  sql_code2.txt  test_code.txt
common/: CMakeLists.txt  exception.cpp  exception.hpp  token.cpp
lexer/: CMakeLists.txt  auto_machine.cpp  auto_machine.hpp  lexer.cpp  lexer.hpp  main.cpp  token.cpp  token.hpp
lexer/test/: test_code1.txt
parser/: CMakeLists.txt  exception.cpp  item.cpp  item.hpp  item_set.cpp  item_set.hpp  main.cpp  parser.cpp  parser.hpp  rule.cpp  rule.hpp
rules/: analyzer_rules.txt  grammar_rules.txt  key_words.txt  lex_rule.txt
src/: main.cpp
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  main.cpp
src/common/: CMakeLists.txt  exception.cpp  exception.hpp  token.cpp  token.hpp
src/lexer/: CMakeLists.txt  auto_machine.cpp  auto_machine.hpp  lexer.cpp  lexer.hpp  main.cpp
src/parser/: CMakeLists.txt  item_set.cpp  item_set.hpp  main.cpp  parser.cpp  parser.hpp  rule.cpp  rule.hpp
src/parser/test/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt
